<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/fondo_menu3"
    tools:context=".activities.LoginActivity"
    >
    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <ImageView
            android:contentDescription="@string/welcome"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginBottom="40dp"
            android:src="@drawable/splash" />
            <Button
                android:id="@+id/btnIniciar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="55dp"
                android:paddingVertical="15dp"
                android:text="@string/login"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:background="@drawable/boton_iniciar_sesion"
                android:layout_marginBottom="20dp"
                />
            <Button
                android:id="@+id/btnRegistrarte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="15dp"
                android:text="@string/register"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:background="@drawable/boton_registrar"
                android:layout_marginTop="20dp"
                />


    </LinearLayout>
</ScrollView>
