<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/fondo_menu3"
    tools:context=".activities.LoginActivity"
    >
    <LinearLayout
        android:background="@drawable/elementos_login"
        android:layout_gravity="center_vertical"
        android:layout_margin="30dp"
        android:paddingVertical="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="30dp"
        ><ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textSize="18sp">

            </TextView>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtR_location"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:autofillHints="Hola"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ocupation"
                android:textColor="@color/black"
                android:textSize="18sp">

            </TextView>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtR_ocupation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:autofillHints="Hola"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gmail"
                android:textColor="@color/black"
                android:textSize="18sp">

            </TextView>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtR_gmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    android:autofillHints="Hola"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pass"
                android:textColor="@color/black"
                android:textSize="18sp">

            </TextView>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtR_pass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:autofillHints="Hola"
                    />

            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pass_confirm"
                android:textColor="@color/black"
                android:textSize="18sp">

            </TextView>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtR_passc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:autofillHints="a"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


    </ScrollView>


        <Button
            android:id="@+id/btnRegistrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/boton_iniciar_sesion"
            android:layout_gravity="center_horizontal"
            android:text="@string/registrarse"
            android:paddingHorizontal="20dp"

            />
            <Button
                android:id="@+id/btnAtras"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginVertical="15dp"
                android:textColor="@color/black"
                android:background="@drawable/boton_registrar"
                android:layout_gravity="center_horizontal"
                android:text="@string/atras"
                android:paddingHorizontal="40dp"
                />
        <Button
            android:id="@+id/txtIngreseAqui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/ingrese_aqui"
            android:textColor="@color/black"
            android:background="@color/invisible"
            android:textSize="15sp"
            />
        <!--<TextView
            android:id="@+id/txtIngreseAqui"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/ingrese_aqui"
            android:textColor="@color/black"
            android:textSize="15dp"
            />-->



    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>