<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/fondo_menu3"
    tools:context=".activities.LoginActivity"
    >
    <LinearLayout
                 android:background="@drawable/elementos_login"
                android:layout_gravity="center_vertical"
                android:layout_margin="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="30dp"
                >

                <ImageView
                    android:contentDescription="@string/welcome"
                    android:layout_width="220dp"
                    android:layout_height="220dp"
                    android:layout_gravity="center_horizontal"

                    android:src="@drawable/splash" />

                <TextView
                    android:id="@+id/myTextView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textSize="40sp"
                    android:layout_marginBottom="20dp"
                    android:layout_gravity="center"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gmail"
                    android:textColor="@color/black"
                    android:textSize="18sp">

                </TextView>
                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtUser"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textCapWords|textEmailAddress"
                            android:autofillHints="Hola"
                            android:textColor="@color/black"
                            />

                    </com.google.android.material.textfield.TextInputLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass"
            android:textColor="@color/black"
            android:textSize="18sp">

        </TextView>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edtPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"

                        android:textColor="@color/black"
                        android:autofillHints="a"/>
                </com.google.android.material.textfield.TextInputLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnCancelar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="25dp"
                        android:layout_marginVertical="15dp"
                        android:background="@drawable/boton_registrar"
                        android:padding="12dp"
                        android:text="@string/atras"
                        android:textColor="@color/black"

                        />

                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="15dp"
                        android:layout_marginHorizontal="25dp"
                        android:background="@drawable/boton_iniciar_sesion"

                        android:padding="10dp"
                        android:text="@string/ingresar"


                        />

                </LinearLayout>
            </LinearLayout>

</ScrollView>
